--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,9 @@
         render: function() {
           return (
             <div className="commentBox">
-              Hello, world! I am a CommentBox.
+              <h1>Comments</h1>
+              <CommentList />
+              <commentForm />
             </div>
           );
         }
