--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.6.2/remarkable.min.js"></script>
   </head>
   <body>
     <div id="content"></div>
@@ -50,12 +51,14 @@
       // tutorial4.js
       var Comment = React.createClass({
         render: function() {
+          var md = new Remarkable();
           return (
             <div className="comment">
               <h2 className="commentAuthor">
                 {this.props.author}
               </h2>
               {this.props.children}
+              {md.render(this.props.children.toString())}
             </div>
           );
         }
