--- a/public/index.html
+++ b/public/index.html
@@ -50,15 +50,20 @@
 
       // tutorial4.js
       var Comment = React.createClass({
-        render: function() {
+        rawMarkup: function() {
           var md = new Remarkable();
+          var rawMarkup = md.render(this.props.children.toString());
+          return { __html: rawMarkup }
+        },
+
+        render: function() {
           return (
             <div className="comment">
               <h2 className="commentAuthor">
                 {this.props.author}
               </h2>
               {this.props.children}
-              {md.render(this.props.children.toString())}
+              <span dangerouslySetInnerHtml="{this.rawMarkup}" />
             </div>
           );
         }
