コメント表示時のミスを修正した
・dangerouslySetInnerHTMLに直した(typo
・呼び出す関数を文字列にしてたの直した(aho
・関数呼びだせてなかったの直した(boke
・不要なテキストを削除した

--- a/public/index.html
+++ b/public/index.html
@@ -62,8 +62,7 @@
               <h2 className="commentAuthor">
                 {this.props.author}
               </h2>
-              {this.props.children}
-              <span dangerouslySetInnerHtml="{this.rawMarkup}" />
+              <span dangerouslySetInnerHTML={this.rawMarkup()} />
             </div>
           );
         }
