JSONコメントデータをとりあえずコード内に設置した
CommentListにおいてみたけどまだ未使用

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,14 @@
 
       // tutorial2.js
       var CommentList = React.createClass({
+
         render: function() {
+          // tutorial8.js
+          var data = [
+            {id: 1, author: "Pete Hunt", text: "This is one comment"},
+            {id: 2, author: "Jordan Walke", text: "This is *another* comment"}
+          ];
+
           return (
             <div className="commentList">
               <Comment author="Pete Hunt">This is one comment</Comment>
