--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
       });
 
       ReactDOM.render(
-        <CommentBox data={data} />,
+        <CommentBox url="/api/comments" />,
         document.getElementById('content')
       );
     </script>
