--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,14 @@
 
       // tutorial1.js
       var CommentBox = React.createClass({
+        getInitialState: function() {
+          return {data: []}
+        },
         render: function() {
           return (
             <div className="commentBox">
               <h1>Comments</h1>
-              <CommentList data={this.props.data} />
+              <CommentList data={this.state.data} />
               <commentForm />
             </div>
           );
