--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         getInitialState: function() {
           return { data: [] }
         },
-        componentDidMount: function() {
+        loadCommentsFromServer: function() {
           $.ajax({
             url: this.props.url,
             dataType: 'json',
@@ -36,6 +36,10 @@
               console.error( this.props.url, status, err.toString() );
             }.bind(this)
           });
+        },
+        componentDidMount: function() {
+          this.loadCommentsFromServer();
+          setInterval(this.loadCommentsFromServer, this.props.pollInterval);
         },
         render: function() {
           return (
@@ -98,7 +102,7 @@
       });
 
       ReactDOM.render(
-        <CommentBox url="/api/comments" />,
+        <CommentBox url="/api/comments" pollInterval={2000} />,
         document.getElementById('content')
       );
     </script>
