CommentFormコンポーネントのDOMをコメント保存用に更新した また、CommentBox内で呼び出す時にタイポしていたので直した

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
             <div className="commentBox">
               <h1>Comments</h1>
               <CommentList data={this.state.data} />
-              <commentForm />
+              <CommentForm />
             </div>
           );
         }
@@ -75,9 +75,11 @@
       var CommentForm = React.createClass({
         render: function() {
           return (
-            <div className="commentForm">
-              Hello, world! I am a CommentForm.
-            </div>
+            <form className="commentForm">
+              <input type="text" placeholder="Your name" />
+              <input type="text" placeholder="Say something..." />
+              <input type="submit" value="Post" />
+            </form>
           );
         }
       });
