フォーム送信されたら親コンポーネントにデータを返すコールバックを用意した 親がstateを保持しているから、処理は親に書くのが筋とのこと。 コールバックを親で定義して、親から子のコンポーネントにコールバックを渡すことで このやり取りを実現している

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,9 @@
             this.setState( {data: data} );
           }.bind(this));
         },
+        handleCommentSubmit: function(comment) {
+          // TODO: フォーム送信されたらコメントリストをリフレッシュする
+        },
         componentDidMount: function() {
           this.loadCommentsFromServer();
           setInterval(this.loadCommentsFromServer, this.props.pollInterval);
@@ -47,7 +50,7 @@
             <div className="commentBox">
               <h1>Comments</h1>
               <CommentList data={this.state.data} />
-              <CommentForm />
+              <CommentForm onCommentSubmit={this.handleCommentSubmit} />
             </div>
           );
         }
