--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
           if (!text || !author) {
             return;
           }
-          // TODO: サーバーに要求を送信
+          this.props.onCommentSubmit( {author: author, text: text} );
           this.setState( {author: '', text: ''} );
         },
         render: function() {
