先読み更新を実装した
フォーム送信後〜ポーリングまでの間は、送信データが反映されないのを改善した。
現在のデータ+送信したばかりの新しいデータを、
送信時にがっちゃんこして、stateをthis.setStateで更新して表示してみせている。

これにてreactチュートリアルおわり✌('ω'✌ )三✌('ω')✌三( ✌'ω')✌

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,12 @@
           }.bind(this));
         },
         handleCommentSubmit: function(comment) {
+          var currentComments = this.state.data;
+          // 雑にユニークぽいIDをいれてるだけー。実際の鯖なら堅牢なの使ってくれるよね(´・ω・`)
+          comment.id = Date.now();
+          var newComments = currentComments.concat([comment]);
+          this.setState( {data: newComments} )
+
           $.ajax({
             type: 'POST',
             url: this.props.url,
